2014-03-14  eig  <eig114@gmail.com>

	* Main.cs: Исправление вылета при указании двух одинаковых
	  имен файла

	* README.md: Добавкление описания

2014-03-14  eig  <eig114@gmail.com>

	* Main.cs: Расширение функционала - может обрабатывать
	  несколько файлов, принимает аргументы --n=X --top=X,
	  контролирующие длину n-грам и количество выводимых.

	* Profiler.cs: 

2014-03-13  eig  <eig114@gmail.com>

	* Profiler.cs: Функции для вычисления расстояний между
	  профилями

	* NGrams.csproj:
	* NgramGetter.cs: 

2014-02-13  eig  <eig114@gmail.com>

	* Main.cs:
	* NGrams.pidb:
	* NGrams.csproj:
	* NgramGetter.cs:
	* NGrams.exe:
	* NGrams.exe.mdb:
	* IDictionaryExtensions.cs: 
