@@ -1,3 +1,13 @@
+2014-03-17  eig  <eig114@gmail.com>
+
+	* IDictionaryExtensions.cs: 
+
+	* Main.cs: Небольшие исправление в выводе
+
+	* NgramGetter.cs: Исправление алгоритма чтения Н-грам
+
+	* Profiler.cs: Обьединение данных с нескольких файлов
+
 2014-03-14  eig  <eig114@gmail.com>
 
 	* Main.cs: Исправление вылета при указании двух одинаковых
